force-app/main/default/objects/crms14__Officer__c/crms14__Officer__c.object-meta.xml
<CustomObject>
    <label>Officer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Officers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>