force-app/main/default/objects/crms14__Officer__c/fields/crms14__Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>crms14__Address_Line_1__c</fullName>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>