force-app/main/default/objects/crms14__Officer__c/fields/crms14__Appointed_Before__c.field-meta.xml
<CustomField>
    <fullName>crms14__Appointed_Before__c</fullName>
    <label>Appointed Before</label>
    <type>Date</type>
</CustomField>