force-app/main/default/objects/crms14__Officer__c/fields/crms14__Connected_Officer__c.field-meta.xml
<CustomField>
    <fullName>crms14__Connected_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Officer</label>
    <referenceTo>crms14__Officer__c</referenceTo>
    <relationshipLabel>Officers</relationshipLabel>
    <relationshipName>Officers</relationshipName>
    <type>Lookup</type>
</CustomField>