force-app/main/default/objects/crms14__Officer__c/fields/crms14__Country_Of_Residence__c.field-meta.xml
<CustomField>
    <fullName>crms14__Country_Of_Residence__c</fullName>
    <label>Country of Residence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>