force-app/main/default/objects/crms14__Officer__c/fields/crms14__Identification_Type__c.field-meta.xml
<CustomField>
    <fullName>crms14__Identification_Type__c</fullName>
    <label>Identification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>