force-app/main/default/objects/crms14__Officer__c/fields/crms14__Is_Parent_Officer__c.field-meta.xml
<CustomField>
    <fullName>crms14__Is_Parent_Officer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Parent Officer</label>
    <type>Checkbox</type>
</CustomField>