force-app/main/default/objects/crms14__Officer__c/fields/crms14__Is_Pre_1992_Appointment__c.field-meta.xml
<CustomField>
    <fullName>crms14__Is_Pre_1992_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pre 1992 Appointment</label>
    <type>Checkbox</type>
</CustomField>