force-app/main/default/objects/crms14__Officer__c/fields/crms14__Legal_Authority__c.field-meta.xml
<CustomField>
    <fullName>crms14__Legal_Authority__c</fullName>
    <label>Legal Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>