force-app/main/default/objects/crms14__Officer__c/fields/crms14__Month_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>crms14__Month_of_Birth__c</fullName>
    <label>Month of Birth</label>
    <length>5</length>
    <type>Text</type>
</CustomField>