force-app/main/default/objects/crms14__Officer__c/fields/crms14__Occupation__c.field-meta.xml
<CustomField>
    <fullName>crms14__Occupation__c</fullName>
    <label>Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>