force-app/main/default/objects/crms14__Officer__c/fields/crms14__Officer_Role__c.field-meta.xml
<CustomField>
    <fullName>crms14__Officer_Role__c</fullName>
    <label>Officer Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>