force-app/main/default/objects/crms14__Officer__c/fields/crms14__Person_Number__c.field-meta.xml
<CustomField>
    <fullName>crms14__Person_Number__c</fullName>
    <externalId>true</externalId>
    <label>Person Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>