force-app/main/default/objects/crms14__Officer__c/fields/crms14__Place_Registered__c.field-meta.xml
<CustomField>
    <fullName>crms14__Place_Registered__c</fullName>
    <label>Place Registered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>