force-app/main/default/objects/crms14__Officer__c/fields/crms14__Premises__c.field-meta.xml
<CustomField>
    <fullName>crms14__Premises__c</fullName>
    <label>Premises</label>
    <length>255</length>
    <type>Text</type>
</CustomField>