force-app/main/default/objects/crms14__Officer__c/fields/crms14__Principal_Office_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>crms14__Principal_Office_Address_Line_2__c</fullName>
    <label>Principal Office Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>