force-app/main/default/objects/crms14__Officer__c/fields/crms14__Principal_Office_Po_Box__c.field-meta.xml
<CustomField>
    <fullName>crms14__Principal_Office_Po_Box__c</fullName>
    <label>Principal Office PO Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>