force-app/main/default/objects/crms14__Officer__c/fields/crms14__Principal_Office_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>crms14__Principal_Office_Postal_Code__c</fullName>
    <label>Principal Office Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>