force-app/main/default/objects/crms14__Officer__c/fields/crms14__Region__c.field-meta.xml
<CustomField>
    <fullName>crms14__Region__c</fullName>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>