force-app/main/default/objects/crms14__Officer__c/fields/crms14__Resigned_On__c.field-meta.xml
<CustomField>
    <fullName>crms14__Resigned_On__c</fullName>
    <label>Resigned On</label>
    <type>Date</type>
</CustomField>