force-app/main/default/objects/crms14__Officer__c/listViews/crms14__All_Officers.listView-meta.xml
<ListView>
    <fullName>crms14__All_Officers</fullName>
    <columns>NAME</columns>
    <columns>crms14__Person_Number__c</columns>
    <columns>crms14__Occupation__c</columns>
    <columns>crms14__Officer_Role__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Officers</label>
</ListView>